add button click 3d model animate

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.3",
     "spline": "^0.0.0",
     "three": "^0.174.0",
-    "vercel": "^41.4.1"
+    "vercel": "^41.4.1",
+    "zustand": "^5.0.3"
   }
 }
